# dialog

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  lib.ring  package.ring
.github/workflows/: alpine_build.yml  freebsd_build.yml  macos_build.yml  main.yml  ubuntu_build.yml  windows_build.yml
examples/: example1.ring
lib/macos/amd64/: libring_dialog.dylib
lib/macos/arm64/: libring_dialog.dylib
src/: dialog.rh  ring_dialog.c
src/patches/: fix_msvc.patch
src/utils/: color.ring  install.ring  uninstall.ring
